# Proyecto-Imagenes-Subacuaticas

./: CMakeLists.txt  README.md  interfaz.py  main.cpp  requirements.txt  settings.h
Deep-WaveNet-Underwater-Image-Restoration/: creditos.md
Deep-WaveNet-Underwater-Image-Restoration/installation/: requirements.txt
Deep-WaveNet-Underwater-Image-Restoration/uie_euvp/: options.py  test.py
Deep-WaveNet-Underwater-Image-Restoration/uw_video_processing/: Untitled1.ipynb  test.py
Evidencia/Método 1 - Image Fusion/: Entrada.txt
Metricas obtenidas por Luis Felipe/Preprocesado con wavenet/: out.txt
Radhika/: main.py
Sea Thru/: Nuevo Documento de texto.txt
SeaThru/: .gitignore  .gitmodules  README.md  a.py  enhanced_video_1.avi  seathru-mono-e2e.py  seathru.py
SeaThru/Metricas obtenidas por Luis Felipe/No preprocesado/: out.txt
data/: seatru_despues.avi  video_1_preprocesado_seathru.avi  video_1_preprocesado_seathru_tracking.avi
